Add SQL views for course, major, and student data; implement system tests for view validation